
* docutils/utils.py:
  
  - Added ``get_stylesheet_list`` function.

* docutils/writers/html4css1/__init__.py:

  - ``--stylesheet`` and ``--stylesheet-path`` options support a comma
    separated list of stylesheets.

* docutils/writers/newlatex2e/__init__.py:

  - Apply [ 1612821 ] Double quotes in literal text in Italian/German

* docutils/writers/latex2e/__init__.py:

  - Add option ``--embed-stylesheet``.
  - Apply [ 1474017 ] image vertical alignment is reversed.
  - Apply [ 2051599 ] multi-page tables in latex writer (from pabigot).
  - Fix: for spanish ``~n`` is ``n`` with tilde above, change to ``~{}n``.
  - Change: has_key for dictionaries (not Nodes) to in-operator.
  - Merge adjacent citations into one latex cite command.
  - Failsave implementation of custom roles.

* docs/ref/rst/restructuredtext.txt:

  - Documented Unicode characters allowed as inline markup openers,
    closers, and delimiters.


Release 0.5 (2008-06-25)
========================

* docutils/languages/he.py: Added to project: Hebrew mappings by
  Meir Kriheli.

* docutils/parsers/rst/languages/he.py: Added to project: Hebrew 
  mappings by Meir Kriheli.

* docutils/frontend.py:

  - Configuration files are now assumed and required to be
    UTF-8-encoded.
  - Paths of applied configuration files are now recorded in the
    runtime setting ``_config_files`` (accessible via
    ``--dump-settings``).
  - Added ``--strip-elements-with-class`` and ``--strip-class``
    options (``strip_elements_with_classes`` and ``strip_classes``
    settings).

* docutils/io.py:

  - Added code to determine the input encoding from data: encoding
    declarations or the presence of byte order marks (UTF-8 & UTF-16).
  - Added support for IronPython 1.0.

* docutils/nodes.py:

  - Added ``document.__getstate__`` method, for pickling.

* docutils/parsers/rst/states.py:

  - Allow ``+`` and ``:`` in reference names.
  - Unquoted targets beginning with an underscore (``.. __target: